feat: add tags service, refactor tags completely, world_tags => module_tags; world_tags_available => module_type_tags_available,...
