# pb/entity.pb.go
@@ -23,31 +23,31 @@ const (
 type EntityType int32
 
 const (
-	EntityType_UNKNOWN   EntityType = 0
-	EntityType_POST      EntityType = 1
-	EntityType_MAP       EntityType = 2
-	EntityType_LOCATION  EntityType = 3
-	EntityType_CHARACTER EntityType = 4
-	EntityType_IMAGE     EntityType = 5
+	EntityType_ENTITY_TYPE_UNKNOWN   EntityType = 0
+	EntityType_ENTITY_TYPE_POST      EntityType = 1
+	EntityType_ENTITY_TYPE_MAP       EntityType = 2
+	EntityType_ENTITY_TYPE_LOCATION  EntityType = 3
+	EntityType_ENTITY_TYPE_CHARACTER EntityType = 4
+	EntityType_ENTITY_TYPE_IMAGE     EntityType = 5
 )
 
 // Enum value maps for EntityType.
 var (
 	EntityType_name = map[int32]string{
-		0: "UNKNOWN",
-		1: "POST",
-		2: "MAP",
-		3: "LOCATION",
-		4: "CHARACTER",
-		5: "IMAGE",
+		0: "ENTITY_TYPE_UNKNOWN",
+		1: "ENTITY_TYPE_POST",
+		2: "ENTITY_TYPE_MAP",
+		3: "ENTITY_TYPE_LOCATION",
+		4: "ENTITY_TYPE_CHARACTER",
+		5: "ENTITY_TYPE_IMAGE",
 	}
 	EntityType_value = map[string]int32{
-		"UNKNOWN":   0,
-		"POST":      1,
-		"MAP":       2,
-		"LOCATION":  3,
-		"CHARACTER": 4,
-		"IMAGE":     5,
+		"ENTITY_TYPE_UNKNOWN":   0,
+		"ENTITY_TYPE_POST":      1,
+		"ENTITY_TYPE_MAP":       2,
+		"ENTITY_TYPE_LOCATION":  3,
+		"ENTITY_TYPE_CHARACTER": 4,
+		"ENTITY_TYPE_IMAGE":     5,
 	}
 )
 
@@ -142,7 +142,7 @@ func (x *Entity) GetType() EntityType {
 	if x != nil {
 		return x.Type
 	}
-	return EntityType_UNKNOWN
+	return EntityType_ENTITY_TYPE_UNKNOWN
 }
 
 func (x *Entity) GetPostId() int32 {
@@ -459,15 +459,20 @@ var file_services_entities_entity_proto_rawDesc = []byte{
 	0x75, 0x70, 0x49, 0x64, 0x88, 0x01, 0x01, 0x42, 0x12, 0x0a, 0x10, 0x5f, 0x63, 0x6f, 0x6e, 0x74,
 	0x65, 0x6e, 0x74, 0x45, 0x6e, 0x74, 0x69, 0x74, 0x79, 0x49, 0x64, 0x42, 0x17, 0x0a, 0x15, 0x5f,
 	0x63, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x45, 0x6e, 0x74, 0x69, 0x74, 0x79, 0x47, 0x72, 0x6f,
-	0x75, 0x70, 0x49, 0x64, 0x2a, 0x54, 0x0a, 0x0a, 0x45, 0x6e, 0x74, 0x69, 0x74, 0x79, 0x54, 0x79,
-	0x70, 0x65, 0x12, 0x0b, 0x0a, 0x07, 0x55, 0x4e, 0x4b, 0x4e, 0x4f, 0x57, 0x4e, 0x10, 0x00, 0x12,
-	0x08, 0x0a, 0x04, 0x50, 0x4f, 0x53, 0x54, 0x10, 0x01, 0x12, 0x07, 0x0a, 0x03, 0x4d, 0x41, 0x50,
-	0x10, 0x02, 0x12, 0x0c, 0x0a, 0x08, 0x4c, 0x4f, 0x43, 0x41, 0x54, 0x49, 0x4f, 0x4e, 0x10, 0x03,
-	0x12, 0x0d, 0x0a, 0x09, 0x43, 0x48, 0x41, 0x52, 0x41, 0x43, 0x54, 0x45, 0x52, 0x10, 0x04, 0x12,
-	0x09, 0x0a, 0x05, 0x49, 0x4d, 0x41, 0x47, 0x45, 0x10, 0x05, 0x42, 0x2a, 0x5a, 0x28, 0x67, 0x69,
-	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x74, 0x68, 0x65, 0x2d, 0x6d, 0x65, 0x64,
-	0x6f, 0x2f, 0x74, 0x61, 0x6c, 0x65, 0x62, 0x6f, 0x75, 0x6e, 0x64, 0x2d, 0x62, 0x61, 0x63, 0x6b,
-	0x65, 0x6e, 0x64, 0x2f, 0x70, 0x62, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x75, 0x70, 0x49, 0x64, 0x2a, 0x9c, 0x01, 0x0a, 0x0a, 0x45, 0x6e, 0x74, 0x69, 0x74, 0x79, 0x54,
+	0x79, 0x70, 0x65, 0x12, 0x17, 0x0a, 0x13, 0x45, 0x4e, 0x54, 0x49, 0x54, 0x59, 0x5f, 0x54, 0x59,
+	0x50, 0x45, 0x5f, 0x55, 0x4e, 0x4b, 0x4e, 0x4f, 0x57, 0x4e, 0x10, 0x00, 0x12, 0x14, 0x0a, 0x10,
+	0x45, 0x4e, 0x54, 0x49, 0x54, 0x59, 0x5f, 0x54, 0x59, 0x50, 0x45, 0x5f, 0x50, 0x4f, 0x53, 0x54,
+	0x10, 0x01, 0x12, 0x13, 0x0a, 0x0f, 0x45, 0x4e, 0x54, 0x49, 0x54, 0x59, 0x5f, 0x54, 0x59, 0x50,
+	0x45, 0x5f, 0x4d, 0x41, 0x50, 0x10, 0x02, 0x12, 0x18, 0x0a, 0x14, 0x45, 0x4e, 0x54, 0x49, 0x54,
+	0x59, 0x5f, 0x54, 0x59, 0x50, 0x45, 0x5f, 0x4c, 0x4f, 0x43, 0x41, 0x54, 0x49, 0x4f, 0x4e, 0x10,
+	0x03, 0x12, 0x19, 0x0a, 0x15, 0x45, 0x4e, 0x54, 0x49, 0x54, 0x59, 0x5f, 0x54, 0x59, 0x50, 0x45,
+	0x5f, 0x43, 0x48, 0x41, 0x52, 0x41, 0x43, 0x54, 0x45, 0x52, 0x10, 0x04, 0x12, 0x15, 0x0a, 0x11,
+	0x45, 0x4e, 0x54, 0x49, 0x54, 0x59, 0x5f, 0x54, 0x59, 0x50, 0x45, 0x5f, 0x49, 0x4d, 0x41, 0x47,
+	0x45, 0x10, 0x05, 0x42, 0x2a, 0x5a, 0x28, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
+	0x6d, 0x2f, 0x74, 0x68, 0x65, 0x2d, 0x6d, 0x65, 0x64, 0x6f, 0x2f, 0x74, 0x61, 0x6c, 0x65, 0x62,
+	0x6f, 0x75, 0x6e, 0x64, 0x2d, 0x62, 0x61, 0x63, 0x6b, 0x65, 0x6e, 0x64, 0x2f, 0x70, 0x62, 0x62,
+	0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
